<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirDesk</string>
    <string name="owned_workspace">Owned Workspace</string>
    <string name="foreign_workspace">Foreign Workspace</string>
    <string name="subscribe">Subscribe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="title_activity_owned_workspace">Owned Workspace</string>
    <string name="invite">Invite</string>
    <string name="new_button">New</string>
    <string name="title_activity_foreign_workspace">Foreign Workspace</string>
    <string name="title_activity_workspace_setup">Create Workspace</string>
    <string name="workspace_name">Workspace Name</string>
    <string name="quota">Quota (Bytes)</string>
    <string name="create">Create</string>
    <string name="privacy_setting">Privacy Setting</string>

    <string-array name="privacy_options">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="title_activity_view_file_owned">View File</string>
    <string name="title_activity_edit_file_owned">Edit File</string>
    <string name="save_button">Save</string>
    <string name="title_activity_edit_file_foreign">Edit File</string>
    <string name="title_activity_view_file_foreign">View File</string>
    <string name="tag">Tag</string>
    <string name="change_login">Change Login</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title_activity_workspace_client_list">workspaceClientList</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="change_quota">Change Quota</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="title_activity_subscribed_tags">Subscribed Tags</string>
    <string name="tags">Tags</string>
    <string name="delete">Delete</string>
    <string name="workspace_deleted">Deleted workspace</string>
    <string name="subscribe_to_workspaces">Subscribe to Workspaces</string>
    <string name="enter_tag">Please enter a tag</string>
    <string name="cancel">Cancel</string>
    <string name="must_enter_tag">You have to enter a tag.</string>
    <string name="tag_subscribed_success">Success, you have subscribed to</string>
    <string name="remove_tag">Remove tag</string>
    <string name="tag_removed">Removed tag</string>
    <string name="create_new_file">Create new file</string>
    <string name="enter_file_name">Please enter the file name</string>
    <string name="must_enter_filename">You have to enter a filename.</string>
    <string name="file_already_exists">That file already exists.</string>
    <string name="file">File</string>
    <string name="created">created</string>
    <string name="invite_client">Invite client</string>
    <string name="enter_client_email">Please enter the client\'s e-mail address</string>
    <string name="must_enter_email">You have to enter an e-mail address.</string>
    <string name="client_already_in_workspace">That client already has access.</string>
    <string name="client_added">Client added</string>
    <string name="enter_new_quota">Enter the new quota value (Bytes):</string>
    <string name="save">Save</string>
    <string name="cannot_set_lower_quota">"You cannot set a new quota lower than the current used quota: "</string>
    <string name="new_quota_set">New quota set.</string>
    <string name="must_enter_a_number">You must enter a number.</string>
    <string name="enter_tags">Enter the workspace\'s tags:</string>
    <string name="tags_saved">Tags saved.</string>
    <string name="ok">OK</string>
    <string name="tag_already_subscribed">That tag is already subscribed.</string>
    <string name="file_removed">File removed</string>
    <string name="remove_file">Remove file</string>
    <string name="edit_file">Edit file</string>
    <string name="manage_subscriptions">Manage subscriptions</string>
    <string name="bytes">bytes</string>
    <string name="change_privacy">Change Privacy</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_private">Private</string>
    <string name="this_workspace_is">This workspace is currently</string>
    <string name="update_it_to">Update it to</string>
    <string name="workspace_pricacy_set_public">Workspace was set to Public.</string>
    <string name="workspace_pricacy_set_private">Workspace was set to Private.</string>
    <string name="populate_db">Populate DB</string>

</resources>
