<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".WorkspaceList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/owned_workspace"
                android:textSize="@dimen/abc_text_size_title_material"
                android:textColor="@android:color/white"
                android:layout_weight="0.7"
                android:paddingTop="@dimen/abc_text_size_body_1_material"
                android:paddingBottom="@dimen/abc_text_size_body_1_material"
                android:paddingLeft="@dimen/abc_text_size_body_1_material"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/new_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/owned_workspace_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/foreign_workspace"
                android:textSize="@dimen/abc_text_size_title_material"
                android:textColor="@android:color/white"
                android:layout_weight="0.7"
                android:paddingTop="@dimen/abc_text_size_body_1_material"
                android:paddingBottom="@dimen/abc_text_size_body_1_material"
                android:paddingLeft="@dimen/abc_text_size_body_1_material"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/subscribe"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/foreign_workspace_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
